[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/BottleRocket.tres" type="DynamicFont" id=1]
[ext_resource path="res://Nodes/Ui/arrow.tscn" type="PackedScene" id=2]
[ext_resource path="res://Graphics/UI/Overworld/flavours/defaultbox.png" type="Texture" id=3]
[ext_resource path="res://Scripts/UI/PSISelect.gd" type="Script" id=4]
[ext_resource path="res://Graphics/UI/Overworld/flavours/defaultlabel.png" type="Texture" id=5]
[ext_resource path="res://Shaders/MenuFlavors.tres" type="Material" id=6]

[node name="PSILevelSelect" type="NinePatchRect"]
material = ExtResource( 6 )
margin_right = 207.0
margin_bottom = 66.0
texture = ExtResource( 3 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 18
custom_constants/margin_top = 10
custom_constants/margin_left = 22
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 22.0
margin_top = 10.0
margin_right = 189.0
margin_bottom = 56.0

[node name="Arrow" parent="." instance=ExtResource( 2 )]
position = Vector2( 100, 16 )
cursor_offset = Vector2( -4, 1 )
consume_input_events = true
skip_empty_labels = true
skip_hidden_items = true
move_sfx = true
select_sfx = true
reset_on_show = false

[node name="DownArrow" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 198, 13 )
rotation = 1.5708

[node name="UpArrow" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 198, 6 )
rotation = -1.5708

[node name="PPCost" type="NinePatchRect" parent="."]
material = ExtResource( 6 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -9.0
margin_right = -8.0
margin_bottom = 9.0
texture = ExtResource( 5 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Label" type="Label" parent="PPCost"]
margin_left = 4.0
margin_top = 2.0
margin_right = 21.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "PP"

[node name="Label2" type="Label" parent="PPCost"]
margin_left = 23.0
margin_top = 2.0
margin_right = 37.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
